Fix size of text on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -66,7 +66,7 @@ section#contact p {
 }
 
 p {
-    font-size: 2.5vw;
+    font-size: 2.5vmax;
     line-height: 1.75;
 }
 
